--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./css/main.css">
-  </head>
-  <body>
-    <div class="row bg-secundary text-center">
-      <div class="column row bg-primary link f7">
-        <div class="column background half-padding">primero a</div>
-        <div class="column alt-background half-padding ">primero b</div>
-      </div>
-      <div class="column half-padding link f3">segundo</div>
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./css/main.css">
+</head>
+
+<body>
+  <div class="row text-center">
+    <div class="column row">
+      <div class="column">Primero a</div>
+      <div class="column">Primero b</div>
     </div>
-  </body>
+    <div class="column">Segundo</div>
+  </div>
+</body>
+
 </html>
