--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 </head>
 
 <body>
-  <div class="row text-center">
-    <div class="column row">
-      <div class="column">Primero a</div>
-      <div class="column">Primero b</div>
+  <div class="">
+    <div class="r t-c ">
+      <div class="p b cl30 small-40">Primero a</div>
+      <div class="c50 p b-s cl40 small-50">Primero b</div>
+      <div class="c50 p b-d cl30 push-small-50 push-large-0 small-30">Segundo</div>
     </div>
-    <div class="column">Segundo</div>
+    <div class="r t-c ">
+      <div class="p b-d cl50 small-50">Primero</div>
+
+      <div class="p b cl80">Segundo</div>
+      <div class="p b-d cl50 small-50">Segundo</div>
+    </div>
   </div>
 </body>
 
